# CText-

./: .gitignore  CMakeLists.txt  README.md  main.cpp  text_editor.cpp  text_editor.h
